<resources>
    <!-- app name -->
    <string name="app_name">wand</string>

    <!-- app strings -->
    <string name="label_ok">OK</string>
    <string name="label_skip">Saltar</string>
    <string name="label_settings">Ajustes</string>
    <string name="label_add_device">Añadir dispositivo</string>
    <string name="label_lock">Bloquear</string>
    <string name="label_automatic_lock">Bloqueo automático</string>
    <string name="label_activate">Activar</string>
    <string name="label_enable">Habilitar</string>
    <string name="label_of">de %1$s</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_advertisement">Aviso</string>
    <string name="label_next">Siguiente</string>
    <string name="label_delete">Eliminar</string>

    <!-- app error strings -->
    <string name="error_empty_field">Este campo no puede estar vacío.</string>
    <string name="error_password_length">La contraseña debe contener 5 caracteres numéricos.</string>
    <string name="error_device_configuration">Ocurrió un error al tratar de configurar el dispositivo.</string>

    <!-- strings related to splash activity -->
    <string name="prompt_wand_need_access_to_some_permissons">Para que Wand funcione adecuadamente necesitaremos acceso a algunos permisos de tu teléfono.</string>
    <string name="warning_can_not_scan_without_location_permission">Wand no puede escanear dispositivos sin este permiso.</string>

    <!-- strings related to onboarding activity -->
    <string name="label_onboarding_section_0">Wand es una plataforma\ndigital para controlar tus cosas.</string>
    <string name="label_onboarding_section_1">Funciona a través de tecnología\ninalámbrica bluetooth.</string>
    <string name="label_onboarding_section_2">Controla los dispositivos\ncercanos a wand.</string>
    <string name="label_onboarding_section_3">¡Que empiece la magia!</string>

    <!-- strings related to main activity -->
    <string name="warning_disable_bluetooth_title">Activa el bluetooth</string>
    <string name="warning_disable_bluetooth_message">Wand es una aplicación que utiliza la tecnología bluetooth para su funcionamiento. Actívalo si quieres usar todo su potencial.</string>
    <string name="warning_disable_gps_message">Wand es una aplicación que utiliza el GPS para su funcionamiento. Actívalo si quieres usar todo su potencial.</string>
    <string name="warning_delete_device_of_owner">Eliminar %1$s de %2$s.</string>

    <!-- strings related to add device activity -->
    <string name="label_looking_devices">Buscando\ndispositivos</string>
    <string name="label_new_device">Dispositivo nuevo</string>

    <!-- strings related to pair device activity -->
    <string name="label_insert_manual_code">Introduce el código incluído en el\nmanual del dispositivo.</string>
    <string name="prompt_detected_new_device_will_start_configuration">Detectamos que es un dispositivo nuevo, comenzaremos con la configuración.</string>
    <string name="label_device_added_correctly">Dispositivo añadido\ncorrectamente.</string>
    <string name="error_link">Error en el enlace.</string>
    <string name="label_tips">Tips</string>
    <string name="label_tip_close">Asegúrese de encontrarse cerca del dispositivo Wand, máximo 10m.</string>
    <string name="label_tip_reset_bluetooth">Si la conexión no se logró, deshabilite el bluetooth y habilitelo de nuevo.</string>
    <string name="label_tip_password">Si no hay conexión la contraseña fue incorrecta intente de nuevo (Si la contraseña es incorrecta Wand te desconecta automáticamente).</string>
    <string name="label_tip_connection">Si Wand no es localizado por la lista de los dispositivos verificar que se encuentre conectado a corriente.</string>

    <!-- strings related to customize device activity -->
    <string name="prompt_linking_device">Enlazando\ndispositivo</string>
    <string name="prompt_correctly_added_device">Dispositivo añadido correctamente</string>
    <string name="prompt_configuring">Configurando…</string>
    <string name="label_assign_name">Asignar nombre</string>
    <string name="label_assign_owner">Asignar propietario</string>
    <string name="label_assign_password">Asignar contraseña</string>
    <string name="label_for_your_safety_customize_your_device">Por tu seguridad, debes asignar un nombre, dueño y contraseña nuevos a tu dispositivo.</string>
    <string name="error_invalid_password">La contraseña debe ser de 5 dígitos</string>
    <string name="label_name_and_owner_added_properly">Nombre, propietario y contraseña\nañadidos correctamente.</string>
    <string name="error_connecting_device">Sucedió un error al conectar con el dispositivo.</string>
    <string name="error_changing_password">Sucedió un error al cambiar la contraseña, por favor resetee el dispositivo e intentelo de nuevo.</string>

    <!-- strings related to settings screen -->
    <string name="label_information_config">Información</string>
    <string name="label_about_us">Acerca de nosotros</string>
    <string name="label_service_conditions">Condiciones del servicio</string>

    <!-- strings related to device detail activity -->
    <string name="label_automatic_mode">Modo automático</string>
    <string name="label_automatically_locks_car_after_20_seconds">Bloquea el automóvil automáticamente\ndespués de 20 segundos de apagarlo.</string>
    <string name="label_name">Nombre</string>
    <string name="label_owner">Propietario</string>
    <string name="label_password">Contraseña</string>
    <string name="label_device_version">Versión del dispositivo</string>
    <string name="label_device_firmware">Versión del firmware</string>
    <string name="label_manufacturing_date">Fecha de fabricación</string>
    <string name="label_connecting">Conectando…</string>
    <string name="label_sending">Enviando…</string>
    <string name="label_change_name">Cambiar nombre</string>
    <string name="label_enter_new_name">Introduce el nuevo nombre</string>
    <string name="label_change_owner">Cambiar propietario</string>
    <string name="label_enter_new_owner">Introduce el nuevo propietario</string>
    <string name="label_change_password">Cambiar contraseña</string>
    <string name="label_enter_new_password">Introduce la nueva contraseña</string>
    <string name="label_confirm_password">Confirma la contraseña</string>
    <string name="error_passwords_not_match">Las contraseñas no coinciden</string>
    <string name="error_updating_password">Error al actualizar la contraseña</string>
</resources>