<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/label_tips"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_tip_close"
        android:gravity="center_vertical"
        android:text="@string/label_tip_close"
        android:textColor="@color/text_color_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_tip_reset_bluetooth"
        android:gravity="center_vertical"
        android:text="@string/label_tip_reset_bluetooth"
        android:textColor="@color/text_color_black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_tip_password"
        android:gravity="center_vertical"
        android:text="@string/label_tip_password"
        android:textColor="@color/text_color_black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_tip_connection"
        android:gravity="center_vertical"
        android:text="@string/label_tip_connection"
        android:textColor="@color/text_color_black"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</android.support.constraint.ConstraintLayout>